--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "tests"
   ],
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.4.2",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.2.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
-    "jest": "^23.4.2"
+    "jest": "^23.4.2",
+    "regenerator-runtime": "^0.12.0"
   },
   "repository": {
     "type": "git",
@@ -33,6 +42,7 @@
   },
   "homepage": "https://github.com/JohnWebb4/setting-up-tests#readme",
   "jest": {
+    "setupTestFrameworkScriptFile": "./setupTests.js",
     "testURL": "http://localhost"
   }
 }
